--- a/StartPage.html
+++ b/StartPage.html
@@ -15,7 +15,7 @@
         <a href="scene1.html" class="button button1">确定</a>
         <div class="gap"></div>
         <!-- 取消按钮 -->
-        <a href="HomePage.html" class="button button2">取消</a>
+        <a href="index.html" class="button button2">取消</a>
     </div>
   </body>
 </html>
