--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>点击跳转</title>
-    <link rel="stylesheet" href="style0.css"> <!-- 引入外部CSS文件 -->
+    <link rel="stylesheet" href="style0.css">
 </head>
 <body>
   <!-- 创建一个全屏链接 -->
@@ -19,7 +19,6 @@
     </a>
 
     <script>
-        // 使用 JavaScript 来替换h1元素的文字
         window.onload = function() {
             setTimeout(function() {
                 document.getElementById('headline').innerText = "点击屏幕任意处以开始游戏";
